tests/snapshots/scenarios__deposit_dispute_chargeback.snap
---
source: tests/scenarios.rs
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,0.0000,0.0000,0.0000,true
