tests/snapshots/scenarios__deposit_dispute_resolve.snap
---
source: tests/scenarios.rs
assertion_line: 90
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,10.0000,0.0000,10.0000,false
