tests/snapshots/scenarios__deposit_one_decimal_renders_four.snap
---
source: tests/scenarios.rs
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,1.5000,0.0000,1.5000,false
