tests/snapshots/scenarios__deposit_then_dispute.snap
---
source: tests/scenarios.rs
assertion_line: 76
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,0.0000,10.0000,10.0000,false
2,5.0000,0.0000,5.0000,false
