tests/snapshots/scenarios__deposits_and_withdrawals.snap
---
source: tests/scenarios.rs
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,6.5000,0.0000,6.5000,false
2,2.7500,0.0000,2.7500,false
3,0.0000,0.0000,0.0000,false
