tests/snapshots/scenarios__deposits_only.snap
---
source: tests/scenarios.rs
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,3.0000,0.0000,3.0000,false
2,2.1234,0.0000,2.1234,false
3,0.5000,0.0000,0.5000,false
