tests/snapshots/scenarios__fraud_sequence_negative_balance.snap
---
source: tests/scenarios.rs
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,-80.0000,0.0000,-80.0000,true
