tests/snapshots/scenarios__malformed_row_skipped_continues.snap
---
source: tests/scenarios.rs
assertion_line: 169
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,12.5000,0.0000,12.5000,false
