tests/snapshots/scenarios__mixed_ignorable_events.snap
---
source: tests/scenarios.rs
assertion_line: 209
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,0.0000,0.0000,0.0000,true
2,4.0000,0.0000,4.0000,false
