tests/snapshots/scenarios__non_positive_amounts_rejected.snap
---
source: tests/scenarios.rs
assertion_line: 224
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,14.0000,0.0000,14.0000,false
