tests/snapshots/scenarios__prior_dispute_resolve_after_lock.snap
---
source: tests/scenarios.rs
expression: run_and_normalise(input)
---
client,available,held,total,locked
1,5.0000,0.0000,5.0000,true
